<resources>
    <string name="app_name">Feedbook</string>
    <!-- Facebook Data-->
    <!--trigma facebook id-->
    <!--<string name="app_id">1673090976236867</string>-->
    <!--capstone facebook id -->
    <string name="app_id">1626774610922182</string>


    <!--Banner ad unit-id-->
    <!--Development  -->
    <!--<string name="banner_ad_unit_id">ca-app-pub-8326929898685917/8560858180</string>-->
    <!--<string name="interstitial_ad_unit_id">ca-app-pub-8326929898685917/1037591383</string>-->

    <!--Production -->
    <string name="interstitial_ad_unit_id">ca-app-pub-8326929898685917/3203478581</string>
    <string name="banner_ad_unit_id">ca-app-pub-8326929898685917/7773278987</string>

    <!--Banner ad unit-id-->

    <!-- Splash Screen-->
    <string name="terms_of_use">Terms of Use</string>
    <string name="by_continuing">By continuing, you accept the</string>
    <string name="terms_of_use_heading">This is Terms of Use Heading</string>
    <string name="splash_app_heading">24hours Life Share</string>
    <string name="login_with_facebook">Login with Facebook</string>

    <!-- Dummy Data-->
    <string name="key_to_success">Key to Success: Celebrate failures readers digest</string>
    <string name="creator_name">Xie Yun</string>
    <string name="created_time">6 Hours before</string>
    <string name="view_count">12005</string>
    <string name="profile_count_login_user">0.8700 HKD</string>
    <string name="create_post">Title:</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_feed">Delete Feed</string>
    <string name="user_name">User</string>
    <string name="total_profit">Total Profit</string>
    <string name="todays_profit">Todays Profit</string>
    <string name="this_month_profit">This Month Profit</string>
    <string name="unreceived_profit">Unreceived Profit</string>
    <string name="paypal">Paypal</string>
    <string name="about">Terms</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="email_hint_chinese">請填寫您的Paypal帳戶信箱</string>
    <string name="save">Save</string>
    <string name="edit_post">Save</string>
    <string name="edit_feed">Edit Feed</string>

    <!--Toasts to Users-->
    <string name="please_try_again">Please Try Again</string>
    <string name="error_occured">Error Occured</string>
    <!--Create Post Screen -->

    <string name="enter_the_title">Enter the title</string>


    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
        tincidunt gravida libero, sed porttitor enim facilisis vitae. Aliquam in ultricies urna.
        Nunc cursus pellentesque nisl eget vulputate. Pellentesque faucibus purus leo, eu egestas
        dolor pellentesque eu. Phasellus lobortis elementum sapien, eu aliquam libero scelerisque
        sit amet. Interdum et malesuada fames ac ante ipsum primis in faucibus. In ornare dictum
        purus non ornare. Donec pharetra quam augue. Sed vitae posuere mauris. Aliquam metus nibh,
        molestie sed fringilla sit amet, dapibus sit amet libero. Aenean vitae eleifend tellus, in
        consequat odio. Duis in nisi vel metus finibus semper. Aliquam imperdiet lectus sit amet
        congue iaculis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
        tincidunt gravida libero, sed porttitor enim facilisis vitae. Aliquam in ultricies urna.
        Nunc cursus pellentesque nisl eget vulputate. Pellentesque faucibus purus leo, eu egestas
        dolor pellentesque eu. Phasellus lobortis elementum sapien, eu aliquam libero scelerisque
        sit amet. Interdum et malesuada fames ac ante ipsum primis in faucibus. In ornare dictum
        purus non ornare. Donec pharetra quam augue. Sed vitae posuere mauris. Aliquam metus nibh,
        molestie sed fringilla sit amet, dapibus sit amet libero. Aenean vitae eleifend tellus, in
        consequat odio. Duis in nisi vel metus finibus semper. Aliquam imperdiet lectus sit amet
        congue iaculis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
        tincidunt gravida libero, sed porttitor enim facilisis vitae. Aliquam in ultricies urna.
        Nunc cursus pellentesque nisl eget vulputate. Pellentesque faucibus purus leo, eu egestas
        dolor pellentesque eu. Phasellus lobortis elementum sapien, eu aliquam libero scelerisque
        sit amet. Interdum et malesuada fames ac ante ipsum primis in faucibus. In ornare dictum
        purus non ornare. Donec pharetra quam augue. Sed vitae posuere mauris. Aliquam metus nibh,
        molestie sed fringilla sit amet, dapibus sit amet libero. Aenean vitae eleifend tellus, in
        consequat odio. Duis in nisi vel metus finibus semper. Aliquam imperdiet lectus sit amet
        congue iaculis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
        tincidunt gravida libero, sed porttitor enim facilisis vitae. Aliquam in ultricies urna.
        Nunc cursus pellentesque nisl eget vulputate. Pellentesque faucibus purus leo, eu egestas
        dolor pellentesque eu. Phasellus lobortis elementum sapien, eu aliquam libero scelerisque
        sit amet. Interdum et malesuada fames ac ante ipsum primis in faucibus. In ornare dictum
        purus non ornare. Donec pharetra quam augue. Sed vitae posuere mauris. Aliquam metus nibh,
        molestie sed fringilla sit amet, dapibus sit amet libero. Aenean vitae eleifend tellus, in
        consequat odio. Duis in nisi vel metus finibus semper. Aliquam imperdiet lectus sit amet
        congue iaculis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
        tincidunt gravida libero, sed porttitor enim facilisis vitae. Aliquam in ultricies urna.
        Nunc cursus pellentesque nisl eget vulputate. Pellentesque faucibus purus leo, eu egestas
        dolor pellentesque eu. Phasellus lobortis elementum sapien, eu aliquam libero scelerisque
        sit amet. Interdum et malesuada fames ac ante ipsum primis in faucibus. In ornare dictum
        purus non ornare. Donec pharetra quam augue. Sed vitae posuere mauris. Aliquam metus nibh,
        molestie sed fringilla sit amet, dapibus sit amet libero. Aenean vitae eleifend tellus, in
        consequat odio. Duis in nisi vel metus finibus semper. Aliquam imperdiet lectus sit amet
        congue iaculis.
    </string>

    <string name="chinese_lorem_ipsum_title">器經美家了物開能使</string>
    <string name="chinese_lorem_ipsum_title_long">目技本銷心們竟哥時花小汽兒了難考是真事都房保大思水平舞我年效但為來氣他</string>

    <string name="chinese_lorem_ipsum">
        目技本銷心們竟哥時花小汽兒了難考是真事都房保大思水平舞我年效但為來氣他，
        國明笑：解聲格：夜式我來母、看然那常畫觀嗎在卻眾為到在性不力我入，
        跟體就火面亮散；筆長著，了關益，轉十始手是我式，業然的。
        入嚴近排負身品代話的體成多，重不它的可研的案，我爸人前廣於建向去工原月制改室時，
        政上油三些離、大公色應造引的展適什精勢了重和分為？用必體了細醫立舉醫金到環辦決前道中輪會裡！
        會火小？病裡只例眼安中車沒！想理這科招起中最了才理本賽，價歷之全人數。告質二，
        不間登離的上知地因整工真女機劇手管光個步速又王她有統的衣明色，求局機有你注破告了西懷小臺切們本。
        英狀痛出月；以去光像是健：上節力女親在節趣！明的看小的響縣。同地起目進社以樣，興展義新我管近好！
        望心當父用，水笑果覺不何立念舉中對條立清事、入時我意如大。出其力前我說。
        下便空布溫型支地該死天可人發的燈次力身指竟此各大坐星長地名之入，是海科告河百德似在爭第軍還明團技！
        共的功斯常
    </string>
    <string name="progress_loading">Loading</string>
    <string name="progress_fetching_images_and_videos">Fetching gallery images &amp; videos</string>
    <string name="progress_fetching_videos">Fetching gallery videos</string>
    <string name="progress_fetching_images">Fetching gallery images</string>
    <string name="posting_feed">Posting Feed...</string>
    <string name="updating_feed">Updating Feed...</string>
    <string name="no_more_data">No more data</string>
    <string name="check_your_internet_connection">Please check your internet connection</string>
    <string name="deleting_feed">Deleting Feed</string>
    <string name="please_enter_valid_email">Please enter valid details</string>
    <string name="sharing_feed">Sharing Feed</string>
    <string name="share_twitter">Twitter</string>
    <string name="share_facebook">Facebook</string>
    <!--<string name="share_sms">Sms</string>-->
    <string name="share_email_subject">App24</string>
    <!--<string name="share_email_gmail">Gmail</string>-->
    <string name="share_email_native">Mail</string>
    <string name="share_chooser_text">Share With..</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="post_comment">Post Comment</string>
    <string name="please_wait">Please wait</string>
    <string name="feed_saved_successfully">Feed saved successfully!</string>
    <string name="whats_in_your_mind">Whats in your mind</string>
    <string name="comment_description">comment description</string>
    <string name="title">title</string>
    <string name="add_media">Add Media</string>
    <string name="please_add_a_comment">Please add a comment</string>
    <string name="please_add_a_title">Please add a title</string>
    <string name="please_add_description">Please add description</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>

    <string name="just_now">&#032; Just now</string>
    <string name="a_minute_ago">&#032; 1 minute ago</string>
    <string name="minute_ago">&#032; minute ago</string>
    <string name="hour_ago">&#032; hour ago</string>
    <string name="an_hour_ago">&#032;1 hour ago</string>
    <string name="yesterday">&#032; yesterday</string>
    <string name="day_ago">&#032; day ago</string>
    <string name="month_ago">&#032; month ago</string>
    <string name="year_ago">&#032; year ago</string>X

    <!-- Strings not in chinese language-->
    <string name="upload_error">Unable to post video on facebook</string>
    <string name="you_cant_share_this_feed">You can\'t share your own feed!</string>
    <string name="paypal_info_updated_successfully">Paypal Info updated successfully!</string>
    <string name="delete_successfully">Feed delete successfully!</string>
    <string name="cannot_delete_this_feed">Can\'t delete this feed!</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit ?</string>
    <string name="exit">Exit</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>


</resources>
