<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="5dp"
              android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/text_background_deselect">
        <RelativeLayout
            android:id="@+id/layout_profit_dash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/main_screen_padding">
            <TextView
                android:id="@+id/txt_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total_profit"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_total"
                android:layout_margin="@dimen/main_screen_padding"
                android:gravity="center"
                android:text="@string/profile_count_login_user"
                android:textColor="@color/text_small_blue"
                android:textSize="@dimen/feed_heading_text"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_todays_profit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_profit_dash"
            android:layout_marginTop="@dimen/main_screen_padding"
            android:background="@color/white"
            android:padding="@dimen/main_screen_padding">
            <TextView
                android:id="@+id/txt_todays_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="left"
                android:text="@string/total_profit"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/txt_todays_profit_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:text="@string/profile_count_login_user"
                android:textColor="@color/text_small_blue"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_this_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_todays_profit"
            android:layout_marginTop="@dimen/main_screen_padding"
            android:background="@color/white"
            android:padding="@dimen/main_screen_padding">
            <TextView
                android:id="@+id/txt_this_month_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="left"
                android:text="@string/this_month_profit"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/txt_this_month_profit_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:text="@string/profile_count_login_user"
                android:textColor="@color/text_small_blue"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layout_unreceived"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_this_month"
            android:layout_marginTop="@dimen/main_screen_padding"
            android:background="@color/white"
            android:paddingBottom="@dimen/main_screen_padding"
            android:paddingLeft="@dimen/main_screen_padding"
            android:paddingRight="@dimen/main_screen_padding">
            <TextView
                android:id="@+id/txt_unreceived_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="left"
                android:text="@string/unreceived_profit"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/txt_unreceived_profit_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:text="@string/profile_count_login_user"
                android:textColor="@color/text_small_blue"/>
        </RelativeLayout>


        <!--<include layout="@layout/view_latest_feeds_with_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/layout_unreceived"/>-->
    </RelativeLayout>
</LinearLayout>